src/objects/Peak_Days__c.object
<CustomObject>
    <description>Operator Peak Days and other industry wide high volume related events.</description>
    <fields>
        <fullName>Airport__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Airport</label>
        <referenceTo>Airport__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Peak_Days</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Calendar_Title_Peak_Days__c</fullName>
        <formula>TEXT(Type_of_Peak_Day__c) &amp; &quot; - &quot; &amp;
Airport__r.Name &amp; &quot; - &quot; &amp;
Event_Description__c &amp; &quot; - &quot; &amp;
Operator_or_Broker_Name__r.Name &amp; &quot; - &quot; &amp;
TEXT(Program__c) &amp; &quot; - &quot; &amp;
Restrictions__c &amp; &quot; - &quot; &amp;
Operator_Program__r.Name   &amp; &quot; - &quot; &amp;
Peak_Day_Booking_Notice__c &amp; &quot; - &quot; &amp;
Peak_Cancellation__c &amp; &quot; - &quot; &amp;
Peak_Day_Departure_Move__c &amp; &quot; - &quot; &amp;
Peak_Premium__c &amp; &quot; - &quot; &amp;
Peak_Restrictions__c</formula>
        <label>Calendar Title - Peak Days</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Description__c</fullName>
        <label>Event Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Next_month__c</fullName>
        <formula>IF(MONTH(Date__c) = (MONTH( TODAY())+1),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next month?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operator_Program__c</fullName>
        <label>Operator Program</label>
        <referenceTo>Operator_Program__c</referenceTo>
        <relationshipLabel>Peak Days</relationshipLabel>
        <relationshipName>Peak_Days</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Operator_or_Broker_Name__c</fullName>
        <label>Operator or Broker Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Peak Days</relationshipLabel>
        <relationshipName>Peak_Days</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Peak_Cancellation__c</fullName>
        <label>Peak Cancellation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Peak_Day_Booking_Notice__c</fullName>
        <label>Peak Day Booking Notice</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Peak_Day_Departure_Move__c</fullName>
        <label>Peak Day Departure Move</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Peak_Premium__c</fullName>
        <label>Peak Premium</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Peak_Restrictions__c</fullName>
        <label>Peak Restrictions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Premium__c</fullName>
        <description>Premium fees for travel on peak days.</description>
        <inlineHelpText>Premium fees for travel on peak days.</inlineHelpText>
        <label>Premium</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Access</fullName>
                </value>
                <value>
                    <fullName>Marquis Jet</fullName>
                </value>
                <value>
                    <fullName>Jet Card</fullName>
                </value>
                <value>
                    <fullName>Fractional</fullName>
                </value>
                <value>
                    <fullName>FSP</fullName>
                </value>
                <value>
                    <fullName>Preferred Access</fullName>
                </value>
                <value>
                    <fullName>(No Pre-Purchase)</fullName>
                </value>
                <value>
                    <fullName>(No Pre-Purchase) INDIVIDUALS ONLY</fullName>
                </value>
                <value>
                    <fullName>(0/10 Hours &amp; $50 Funds)</fullName>
                </value>
                <value>
                    <fullName>(0/10/25 Hours &amp; $50/100/200 Funds)</fullName>
                </value>
                <value>
                    <fullName>(0/10/25/50 Hours &amp; $50/100/200/400 Funds)</fullName>
                </value>
                <value>
                    <fullName>(25 Hours &amp; $100/200 Funds)</fullName>
                </value>
                <value>
                    <fullName>(25/50 Hours &amp; $100/200/400 Funds)</fullName>
                </value>
                <value>
                    <fullName>FLIGHT OPTIONS ONLY</fullName>
                </value>
                <value>
                    <fullName>FLEXJET ONLY</fullName>
                </value>
                <value>
                    <fullName>BOTH PROGRAMS</fullName>
                </value>
                <value>
                    <fullName>EJM Flat Rate Program</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Restrictions__c</fullName>
        <description>Description of peak day restrictions.</description>
        <inlineHelpText>Description of peak day restrictions.</inlineHelpText>
        <label>Restrictions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_Peak_Day__c</fullName>
        <label>Type of Peak Day</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BLACKOUT DAY</fullName>
                </value>
                <value>
                    <fullName>EVENT</fullName>
                </value>
                <value>
                    <fullName>FLEXJET NEW CLIENT RESTRICTED ACCESS</fullName>
                </value>
                <value>
                    <fullName>HEAVY DEMAND</fullName>
                </value>
                <value>
                    <fullName>HIGH DEMAND</fullName>
                </value>
                <value>
                    <fullName>LOW SEASON DAY</fullName>
                </value>
                <value>
                    <fullName>NO ACCESS DAY</fullName>
                </value>
                <value>
                    <fullName>PEAK DAY</fullName>
                </value>
                <value>
                    <fullName>PEAK DAY PARTIAL - 12AM-6AM</fullName>
                </value>
                <value>
                    <fullName>PEAK DAY PARTIAL -9PM-12AM</fullName>
                </value>
                <value>
                    <fullName>PREMIUM CHARGE DAY</fullName>
                </value>
                <value>
                    <fullName>SENTIENT NO LONGER ACCEPTING BOOKINGS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Peak Days</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Program__c</columns>
        <columns>Restrictions__c</columns>
        <columns>Type_of_Peak_Day__c</columns>
        <columns>Date__c</columns>
        <columns>Event_Description__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Apollo_Days_2017</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Type_of_Peak_Day__c</columns>
        <columns>Operator_or_Broker_Name__c</columns>
        <columns>Operator_Program__c</columns>
        <columns>Peak_Cancellation__c</columns>
        <columns>Peak_Day_Booking_Notice__c</columns>
        <columns>Peak_Day_Departure_Move__c</columns>
        <columns>Peak_Premium__c</columns>
        <columns>Peak_Restrictions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_of_Peak_Day__c</field>
            <operation>equals</operation>
            <value>PEAK DAY</value>
        </filters>
        <filters>
            <field>Operator_or_Broker_Name__c</field>
            <operation>contains</operation>
            <value>Apollo Jets</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2016</value>
        </filters>
        <label>Apollo Jets Peak Days - 2017</label>
    </listViews>
    <listViews>
        <fullName>Delta_Peak_Days_2017</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Type_of_Peak_Day__c</columns>
        <columns>Operator_or_Broker_Name__c</columns>
        <columns>Operator_Program__c</columns>
        <columns>Peak_Day_Booking_Notice__c</columns>
        <columns>Peak_Cancellation__c</columns>
        <columns>Peak_Day_Departure_Move__c</columns>
        <columns>Peak_Premium__c</columns>
        <columns>Peak_Restrictions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_of_Peak_Day__c</field>
            <operation>equals</operation>
            <value>PEAK DAY</value>
        </filters>
        <filters>
            <field>Operator_or_Broker_Name__c</field>
            <operation>contains</operation>
            <value>Delta Private Jets</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2016</value>
        </filters>
        <label>Delta Private Jets Peak Days - 2017</label>
    </listViews>
    <listViews>
        <fullName>Flexjet_2017</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Type_of_Peak_Day__c</columns>
        <columns>Operator_or_Broker_Name__c</columns>
        <columns>Operator_Program__c</columns>
        <columns>Peak_Day_Booking_Notice__c</columns>
        <columns>Peak_Cancellation__c</columns>
        <columns>Peak_Day_Departure_Move__c</columns>
        <columns>Peak_Premium__c</columns>
        <columns>Peak_Restrictions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_of_Peak_Day__c</field>
            <operation>equals</operation>
            <value>PEAK DAY</value>
        </filters>
        <filters>
            <field>Operator_or_Broker_Name__c</field>
            <operation>equals</operation>
            <value>Flexjet / Flight Options</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2016</value>
        </filters>
        <label>Flexjet Peak Days - 2017</label>
    </listViews>
    <listViews>
        <fullName>NJE_Marquis_Days_2016</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Type_of_Peak_Day__c</columns>
        <columns>Operator_or_Broker_Name__c</columns>
        <columns>Program__c</columns>
        <columns>Restrictions__c</columns>
        <columns>Premium__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_of_Peak_Day__c</field>
            <operation>equals</operation>
            <value>PEAK DAY</value>
        </filters>
        <filters>
            <field>Operator_or_Broker_Name__c</field>
            <operation>equals</operation>
            <value>NetJets Europe</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2015</value>
        </filters>
        <filters>
            <field>Program__c</field>
            <operation>equals</operation>
            <value>Marquis Jet</value>
        </filters>
        <label>NetJets EUROPE CARD Peak Days - 2016</label>
    </listViews>
    <listViews>
        <fullName>NetJets_2017</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Type_of_Peak_Day__c</columns>
        <columns>Operator_or_Broker_Name__c</columns>
        <columns>Operator_Program__c</columns>
        <columns>Peak_Day_Booking_Notice__c</columns>
        <columns>Peak_Cancellation__c</columns>
        <columns>Peak_Day_Departure_Move__c</columns>
        <columns>Peak_Premium__c</columns>
        <columns>Peak_Restrictions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_of_Peak_Day__c</field>
            <operation>equals</operation>
            <value>PEAK DAY</value>
        </filters>
        <filters>
            <field>Operator_or_Broker_Name__c</field>
            <operation>equals</operation>
            <value>NetJets Aviation</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2016</value>
        </filters>
        <label>NetJets Peak Days - 2017</label>
    </listViews>
    <listViews>
        <fullName>NetJets_Blackout_Days_2017</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Type_of_Peak_Day__c</columns>
        <columns>Operator_or_Broker_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_of_Peak_Day__c</field>
            <operation>equals</operation>
            <value>BLACKOUT DAY</value>
        </filters>
        <filters>
            <field>Operator_or_Broker_Name__c</field>
            <operation>equals</operation>
            <value>NetJets Aviation</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2016</value>
        </filters>
        <label>NetJets Blackout Days - 2017</label>
    </listViews>
    <listViews>
        <fullName>NetJets_EliteCard_Days_2017</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Type_of_Peak_Day__c</columns>
        <columns>Operator_or_Broker_Name__c</columns>
        <columns>Operator_Program__c</columns>
        <columns>Peak_Day_Booking_Notice__c</columns>
        <columns>Peak_Cancellation__c</columns>
        <columns>Peak_Day_Departure_Move__c</columns>
        <columns>Peak_Premium__c</columns>
        <columns>Peak_Restrictions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_of_Peak_Day__c</field>
            <operation>equals</operation>
            <value>PEAK DAY</value>
        </filters>
        <filters>
            <field>Operator_or_Broker_Name__c</field>
            <operation>equals</operation>
            <value>NetJets Aviation</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2016</value>
        </filters>
        <filters>
            <field>Operator_Program__c</field>
            <operation>equals</operation>
            <value>Marquis Elite Card</value>
        </filters>
        <label>NetJets Elite Card Peak Days - 2017</label>
    </listViews>
    <listViews>
        <fullName>NetJets_Fractional_Peak_Days_2017</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Type_of_Peak_Day__c</columns>
        <columns>Operator_or_Broker_Name__c</columns>
        <columns>Operator_Program__c</columns>
        <columns>Peak_Day_Booking_Notice__c</columns>
        <columns>Peak_Cancellation__c</columns>
        <columns>Peak_Day_Departure_Move__c</columns>
        <columns>Peak_Premium__c</columns>
        <columns>Peak_Restrictions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_of_Peak_Day__c</field>
            <operation>equals</operation>
            <value>PEAK DAY</value>
        </filters>
        <filters>
            <field>Operator_or_Broker_Name__c</field>
            <operation>equals</operation>
            <value>NetJets Aviation</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2016</value>
        </filters>
        <filters>
            <field>Operator_Program__c</field>
            <operation>equals</operation>
            <value>NetJets Fractional Share</value>
        </filters>
        <label>NetJets Fractional Peak Days - 2017</label>
    </listViews>
    <listViews>
        <fullName>NetJets_Marquis_Days_2017</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Type_of_Peak_Day__c</columns>
        <columns>Operator_or_Broker_Name__c</columns>
        <columns>Operator_Program__c</columns>
        <columns>Peak_Day_Booking_Notice__c</columns>
        <columns>Peak_Cancellation__c</columns>
        <columns>Peak_Day_Departure_Move__c</columns>
        <columns>Peak_Premium__c</columns>
        <columns>Peak_Restrictions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_of_Peak_Day__c</field>
            <operation>equals</operation>
            <value>PEAK DAY</value>
        </filters>
        <filters>
            <field>Operator_or_Broker_Name__c</field>
            <operation>equals</operation>
            <value>NetJets Aviation</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2016</value>
        </filters>
        <filters>
            <field>Operator_Program__c</field>
            <operation>equals</operation>
            <value>Marquis Standard Card</value>
        </filters>
        <label>NetJets Marquis Jet Peak Days - 2017</label>
    </listViews>
    <listViews>
        <fullName>Sentient_Days_2017</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Type_of_Peak_Day__c</columns>
        <columns>Operator_or_Broker_Name__c</columns>
        <columns>Operator_Program__c</columns>
        <columns>Peak_Day_Booking_Notice__c</columns>
        <columns>Peak_Cancellation__c</columns>
        <columns>Peak_Day_Departure_Move__c</columns>
        <columns>Peak_Premium__c</columns>
        <columns>Peak_Restrictions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_of_Peak_Day__c</field>
            <operation>equals</operation>
            <value>PEAK DAY</value>
        </filters>
        <filters>
            <field>Operator_or_Broker_Name__c</field>
            <operation>equals</operation>
            <value>Sentient</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2016</value>
        </filters>
        <filters>
            <field>Operator_Program__c</field>
            <operation>equals</operation>
            <value>Sentient Jet Card</value>
        </filters>
        <label>Sentient Jet Card Peak Days - 2017</label>
    </listViews>
    <listViews>
        <fullName>TMC_Peak_Days_2017</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Type_of_Peak_Day__c</columns>
        <columns>Operator_or_Broker_Name__c</columns>
        <columns>Operator_Program__c</columns>
        <columns>Peak_Day_Booking_Notice__c</columns>
        <columns>Peak_Cancellation__c</columns>
        <columns>Peak_Day_Departure_Move__c</columns>
        <columns>Peak_Premium__c</columns>
        <columns>Peak_Restrictions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_of_Peak_Day__c</field>
            <operation>equals</operation>
            <value>PEAK DAY</value>
        </filters>
        <filters>
            <field>Operator_or_Broker_Name__c</field>
            <operation>contains</operation>
            <value>Travel Management Company (TMC)</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2016</value>
        </filters>
        <filters>
            <field>Operator_Program__c</field>
            <operation>equals</operation>
            <value>TMC Charter Peak Days</value>
        </filters>
        <label>TMC Peak Days - 2017</label>
    </listViews>
    <listViews>
        <fullName>Travel_Events_2017</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Airport__c</columns>
        <columns>Event_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_of_Peak_Day__c</field>
            <operation>equals</operation>
            <value>EVENT</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2016</value>
        </filters>
        <label>TRAVEL EVENTS - 2017</label>
    </listViews>
    <listViews>
        <fullName>VistaJet_Peak_Days_2017</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Type_of_Peak_Day__c</columns>
        <columns>Operator_or_Broker_Name__c</columns>
        <columns>Operator_Program__c</columns>
        <columns>Peak_Day_Booking_Notice__c</columns>
        <columns>Peak_Cancellation__c</columns>
        <columns>Peak_Day_Departure_Move__c</columns>
        <columns>Peak_Premium__c</columns>
        <columns>Peak_Restrictions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_of_Peak_Day__c</field>
            <operation>equals</operation>
            <value>PEAK DAY</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2016</value>
        </filters>
        <filters>
            <field>Operator_or_Broker_Name__c</field>
            <operation>equals</operation>
            <value>VistaJet US</value>
        </filters>
        <filters>
            <field>Operator_Program__c</field>
            <operation>equals</operation>
            <value>VistaJet FSP</value>
        </filters>
        <label>VistaJet Peak Days - 2017</label>
    </listViews>
    <listViews>
        <fullName>Wheels_Up_Corporate_Peak_Days_2017</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Type_of_Peak_Day__c</columns>
        <columns>Operator_or_Broker_Name__c</columns>
        <columns>Operator_Program__c</columns>
        <columns>Peak_Day_Booking_Notice__c</columns>
        <columns>Peak_Cancellation__c</columns>
        <columns>Peak_Day_Departure_Move__c</columns>
        <columns>Peak_Premium__c</columns>
        <columns>Peak_Restrictions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_of_Peak_Day__c</field>
            <operation>equals</operation>
            <value>PEAK DAY</value>
        </filters>
        <filters>
            <field>Operator_or_Broker_Name__c</field>
            <operation>contains</operation>
            <value>Wheels Up</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2016</value>
        </filters>
        <filters>
            <field>Operator_Program__c</field>
            <operation>equals</operation>
            <value>Wheels Up Corporate Standard Member</value>
        </filters>
        <label>Wheels Up Corporate Peak Days - 2017</label>
    </listViews>
    <nameField>
        <displayFormat>P-{000000}</displayFormat>
        <label>Peak Day ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Peak Days</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>